fix: update for space in multiselect bottom align

--- a/src/components/Dropdown/DropdownPills.less
+++ b/src/components/Dropdown/DropdownPills.less
@@ -1,6 +1,11 @@
 .o-multiselect_choices.pills.bottom {
-  li:last-child {
+  li:first-child {
     margin-top: 0.625rem;
+    margin-bottom: 0;
+  }
+
+  li {
+    margin-top: 0.5rem;
     margin-bottom: 0;
   }
 }
